--- a/.env
+++ b/.env
@@ -5,11 +5,11 @@ APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
 DB_CONNECTION=mysql
-DB_HOST=us-cdbr-east.cleardb.com
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=heroku_db
-DB_USERNAME=adffdadf2341
-DB_PASSWORD=adf4234
+DB_DATABASE=bg_db
+DB_USERNAME=root
+DB_PASSWORD=my123
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
