arreglo en register

--- a/.env
+++ b/.env
@@ -4,12 +4,12 @@ APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
-DB_CONNECTION=mysql
+DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
-DB_PORT=3306
+DB_PORT=5432
 DB_DATABASE=bg_db
-DB_USERNAME=root
-DB_PASSWORD=my123
+DB_USERNAME=postgres
+DB_PASSWORD=12345
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
